set MVP IBOutlets

--- a/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
+++ b/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
@@ -373,7 +373,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="MVP repair credit: $xxx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2V5-LA-dZ8">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="MVP repair credit: $xxx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2V5-LA-dZ8" userLabel="Credit Value">
                                                 <rect key="frame" x="0.0" y="40.333333333333343" width="398" height="24"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="24" id="4NX-q8-L36"/>
@@ -398,13 +398,13 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx-xxx-xxx-1234" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kmd-WO-HHq">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx-xxx-xxx-1234" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kmd-WO-HHq" userLabel="CC">
                                                 <rect key="frame" x="0.0" y="110.66666666666666" width="398" height="26.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xx/xx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKa-aK-uc3">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xx/xx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKa-aK-uc3" userLabel="CC Exp Date">
                                                 <rect key="frame" x="0.0" y="143" width="398" height="26.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
@@ -423,6 +423,9 @@
                                                         </fragment>
                                                     </attributedString>
                                                 </state>
+                                                <connections>
+                                                    <action selector="editPaymentMethod" destination="tYQ-YW-ZVJ" eventType="touchUpInside" id="X7v-jS-y8Q"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rR1-Gv-Tuh">
                                                 <rect key="frame" x="0.0" y="198" width="398" height="2"/>
@@ -558,6 +561,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="lblCC" destination="Kmd-WO-HHq" id="mGe-aR-5M9"/>
+                        <outlet property="lblCCExpDate" destination="gKa-aK-uc3" id="pwh-PQ-Nrx"/>
+                        <outlet property="lblCredit" destination="2V5-LA-dZ8" id="XHe-jR-u89"/>
                         <segue destination="oXG-l5-upH" kind="unwind" identifier="signout" animates="NO" unwindAction="unwindToInitViewWithSegue:" id="Pco-DN-zM0"/>
                     </connections>
                 </viewController>
