--- a/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
+++ b/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
@@ -127,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZe-ZK-wcn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="386" y="32"/>
+            <point key="canvasLocation" x="335" y="43"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="Hkh-5h-PWB">
@@ -394,7 +394,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oi3-S0-pTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1085.5072463768117" y="319.56521739130437"/>
+            <point key="canvasLocation" x="1046" y="52"/>
         </scene>
         <!--Phone Details Sign Up View Controller-->
         <scene sceneID="aBM-ZC-aQ9">
@@ -644,7 +644,7 @@
                                     <constraint firstItem="JA2-mU-0Hf" firstAttribute="top" secondItem="vQ7-u6-ANe" secondAttribute="top" id="yyL-10-ASN"/>
                                 </constraints>
                             </scrollView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="79i-aZ-UYI">
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" backIndicatorImage="NavBack" translatesAutoresizingMaskIntoConstraints="NO" id="79i-aZ-UYI">
                                 <rect key="frame" x="0.0" y="13" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </navigationBar>
@@ -1264,7 +1264,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7ba-wr-reP" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bS9-zc-mRy">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backIndicatorImage="NavBack" id="bS9-zc-mRy">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.088098826140000003" green="0.088098826140000003" blue="0.088098826140000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
